update and separate recipeView.js

--- a/PROJECTS/Final Project/Forkify/package.json
+++ b/PROJECTS/Final Project/Forkify/package.json
@@ -10,6 +10,7 @@
   "license": "ISC",
   "dependencies": {
     "core-js": "^3.41.0",
+    "fractional": "^1.0.0",
     "parcel": "^2.13.3",
     "regenerator-runtime": "^0.14.1"
   },
