--- a/PROJECTS/Final Project/Forkify/package.json
+++ b/PROJECTS/Final Project/Forkify/package.json
@@ -2,9 +2,10 @@
   "name": "forkify",
   "version": "1.0.0",
   "description": "Recipe Application",
+  "default": "index.html",
   "scripts": {
     "start": "parcel index.html",
-    "build": "parcel build index.html"
+    "build": "parcel build index.html --dist-dir ./dist"
   },
   "author": "Apurba Dutta",
   "license": "ISC",
